<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:theme="@android:style/Theme.Material"
                tools:context=".MainActivity">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/crc"
        android:id="@+id/crc_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:onClick="goToInformationActivity"
        android:textColor="@color/OldGold"
        android:backgroundTint="@color/DarkBlue"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/library"
        android:id="@+id/library_button"
        android:layout_below="@+id/crc_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="goToInformationActivity"
        android:textColor="@color/OldGold"
        android:backgroundTint="@color/DarkBlue"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/culc"
        android:id="@+id/culc_button"
        android:layout_below="@+id/library_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="goToInformationActivity"
        android:textColor="@color/OldGold"
        android:backgroundTint="@color/DarkBlue"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dining"
        android:id="@+id/dining_button"
        android:layout_below="@+id/culc_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="goToInformationActivity"
        android:textColor="@color/OldGold"
        android:backgroundTint="@color/DarkBlue"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/analytics"
        android:id="@+id/analytics_button"
        android:layout_below="@+id/dining_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/OldGold"
        android:backgroundTint="@color/DarkBlue"/>

</RelativeLayout>
